--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -1,46 +1,31 @@
-@charset "UTF-8";
-ul li {
+.investment {
+  background:  #2E2E31;
+}
+.investment__wrapper {
+  margin: 0 250px;
+}
+.investment-body {
+  display: flex;
+  column-gap: 320px;
+  padding: 150px 0 100px 0;
+}
+.investment-body-content {
+  max-width: 667px;
+}
+.lead__download-links-list {
+  display: flex;
   list-style: none;
+  padding: 0;
+  column-gap: 30px;
 }
-
-a, a:visited {
-  text-decoration: none;
-}
-
-.ibg {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 #more {
   display: none;
 }
-
-.investment {
-  display: flex;
-  background: linear-gradient(180deg, #2E2E31 0%, #18181A 100%);
-  margin: 0px 0px 0px 0px;
-  position: relative;
-}
-.investment__column {
-  flex: 0 0 50%;
-}
 .investment__image {
   position: absolute;
-  margin-left: 250px;
-  margin-top: 200px;
-}
-.investment__image img {
-  border-radius: 30px;
-}
-
-.investment-body {
-  padding-top: 150px;
-  padding-left: 200px;
+  top: 430px
 }
 .investment-body__title {
-  padding-right: 80px;
   font-size: 72px;
   line-height: 87px;
   color: #fff;
@@ -55,46 +40,32 @@ a, a:visited {
   color: #fff;
   margin-bottom: 50px;
 }
-
-.investment-body-content {
-  max-width: 950px;
+.card__wrapper {
+  margin: 235px 250px 200px 250px;
 }
-
 .card {
   display: flex;
-  margin: 0px 0px 0px 0px;
+  column-gap: 50px;
 }
-.card__column {
-  flex: 0 0 50%;
-  margin: 235px 0px 154px 0px;
-}
-.card__image {
-  height: 100%;
-  margin-left: 258px;
-}
-
-.card-body {
-  margin-right: 171px;
-}
-.card-body__link li:nth-child(1) {
-  list-style: decimal;
-}
-.card-body__link li:nth-child(3) {
-  list-style: decimal;
+.card__image-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 618px;
 }
 .card-body__list_2 {
   font-weight: 600;
   font-size: 36px;
   line-height: 44px;
   color: #007094;
-  margin: 20px 0px 20px 20px;
+  margin: 20px 0px 20px 0;
 }
 .card-body__list_4 {
   font-weight: 600;
   font-size: 36px;
   line-height: 44px;
   color: #007094;
-  margin: 20px 0px 20px 20px;
+  margin: 20px 0px 20px 0;
 }
 .card-body__text {
   padding-right: 30px;
@@ -102,24 +73,8 @@ a, a:visited {
   line-height: 29px;
   font-weight: 400;
 }
-
-.sfera {
-  display: flex;
-  background: #fff;
-}
-.sfera__column {
-  flex: 0 0 60%;
-  margin: 46px 0px 0px 0px;
-}
-.sfera__image {
-  margin-right: 246px;
-  margin-left: 200px;
-  margin-top: 57px;
-}
-
-.sfera-body {
-  margin-left: 258px;
-  list-style: circle;
+.sfera__wrapper {
+  margin: 0 256px;
 }
 .sfera-body__uptext {
   font-weight: 700;
@@ -127,110 +82,149 @@ a, a:visited {
   line-height: 58px;
   margin-bottom: 40px;
 }
-.sfera-body__link {
-  padding-left: 25px;
-  margin-top: 30px;
-}
-.sfera-body__link li:before {
-  content: "• ";
-  color: #000;
-  margin-left: -20px;
-}
-.sfera-body__list {
-  margin-top: 10px;
-}
 .sfera-body__downtext {
   font-size: 24px;
   line-height: 29px;
   font-weight: 400;
   padding-right: 110px;
 }
-
-.venchur-body {
-  margin: 100px 308px 0px 258px;
+.sfera-body-content {
+  max-width: 835px;
+}
+.sfera-body__link {
+  padding-left: 25px;
+  margin-bottom: 100px;
+}
+.venchur__wrapper {
+  margin: 0 256px;
+}
+.venchur-body-content {
+  max-width: 835px;
 }
 .venchur-body__title {
   font-weight: 700;
   font-size: 48px;
   line-height: 58px;
-  margin-bottom: 40px;
+  margin: 200px 0 40px 0;
 }
-.venchur-body__undertitle {
-  margin-top: 36px;
-  margin-bottom: 40px;
+.venchur__title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 58px;
+  margin: 200px 0 55px 0;
 }
-.venchur-body__undertitle_text {
-  margin: 0px 0px 0px 0px;
+.venchur-list {
+  margin: 7px 0 7px 0;
 }
-.venchur-body__link {
-  padding-left: 0;
+.venchur__downtext {
+  margin: 48px 0 100px 0;
 }
 .venchur-body-list {
   font-size: 24px;
   line-height: 29px;
   margin-bottom: 40px;
-}
-
-.sfera-2 {
-  display: flex;
-}
-.sfera-2__column {
-  flex: 0 0 60%;
-  margin: 160px 0px 100px 258px;
-}
-.sfera-2__image {
-  margin-right: 200px;
-  margin-left: 245px;
-  margin-top: 68px;
-}
-
-.sfera-2-body__uptext {
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 38px;
-  margin-bottom: 55px;
-}
-.sfera-2-body__link {
+  list-style: none;
+} 
+.venchur-body__undertitle {
+  font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  margin-bottom: 40px;
 }
-.sfera-2-body__link li {
-  list-style: decimal;
-}
-.sfera-2-body__downtext {
-  margin-top: 33px;
-}
-
-.sfera-2-body-content {
-  padding-right: 245px;
-}
-
-.goal {
-  background: #fff;
-}
-
-.goal-body__title {
-  color: #000;
-  font-size: 36px;
-  font-weight: 600;
-  line-height: 43px;
-  text-align: center;
-}
-
-.goal-body-content {
-  margin: 130px 0px 130px 0px;
-}
-
-.lead__download-links-list {
-  display: flex;
-  list-style: none;
+.venchur-body__link { 
   padding: 0;
-  margin-bottom: 100px;
-}
-.lead__download-links-list-item {
-  flex: 0 1 50%;
+} 
+.venchur__link {
+  padding-left: 25px;
 }
 #btn {
   cursor: pointer;
   color: #007094;
+}
+@media screen and  (max-width: 1440px) {
+  .investment__wrapper,
+  .sfera__wrapper,
+  .venchur__wrapper {
+    margin: 0 150px;
+  }
+  .investment-body {
+    column-gap: 150px;
+  }
+  .card__wrapper {
+    margin: 234px 50px 110px 89px;
+  }
+}
+@media screen and  (max-width: 768px) {
+  .investment__wrapper,
+  .sfera__wrapper,
+  .venchur__wrapper,
+  .card__wrapper {
+    margin: 0 50px;
+  }
+  .investment-body__title {
+    font-size: 48px;
+    line-height: 58px;
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+  .investment-body__text {
+    max-width: 337px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    margin-bottom: 20px;
+  }
+  .card {
+    flex-direction: column;
+  }
+  .investment__image {
+    width: 230px;
+    top: 200px;
+    right: 80px;
+  }
+  .lead__download-links-list {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .card__image-center {
+    width: 386px;
+    margin: 50px auto;
+  }
+  .card-body__link,
+  .card-body__text,
+  .venchur__downtext {
+    margin: 48px 0 100px 0;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+  }
+  .venchur-body-list,
+  .venchur-list,
+  .sfera-body__downtext,
+  .sfera-body__link {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+  }
+  .card-body__list_2 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+  }
+  .sfera-body__uptext,
+  .venchur-body__title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    margin: 55px 0 40px 0;
+  }
+  .venchur__title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    margin: 100px 0 55px 0;
+  }
+  .venchur__downtext {
+    margin: 48px 0 50px 0;
+  }
 }
