--- a/assets/css/header4.css
+++ b/assets/css/header4.css
@@ -53,7 +53,9 @@
     transform:scale(1);
     background:#1f1f26;
     }
-    
+    .logo{
+        cursor: pointer;
+    }
     .nav_list-elements {
     width:100%;
     height:100%;
