--- a/assets/css/landing-card4.css
+++ b/assets/css/landing-card4.css
@@ -17,8 +17,6 @@
 	inset: 3px;
 	background-size: cover;
 	background-position: center;
-	display: flex;
-	justify-content: center;
 	transition: 1s;
 }
 .island_poppup-IOS{
@@ -34,7 +32,7 @@
 	background: url(../animat/Menu\ IOS.png);
 	transition: 5s;
 	opacity: 0;
-	animation: IOS 4s infinite cubic-bezier(0.165, 0.84, 0.44, 1) alternate;
+	animation: IOS 3s infinite cubic-bezier(0.165, 0.84, 0.44, 1) alternate;
 }
 .Mac1{background: url(../animat/Asap-IOS.png);}
 .Mac2{background: url(../animat/Profile-IOS.png);}
@@ -60,7 +58,6 @@
 	100% {
 		right: 8px;
 		opacity: 1;
-		animation-delay: 20s;
 	}
 }
 .island_poppup-Android{
@@ -74,18 +71,18 @@
 	background: url(../animat/Menu\ IOS.png);
 	transition: 5s;
 	opacity: 0;
-	animation: Android 3s infinite cubic-bezier(0.165, 0.84, 0.44, 1) alternate;
+	animation: Android 4s infinite cubic-bezier(0.165, 0.84, 0.44, 1) alternate;
 }
 
-.And1{background: url(../animat/Asap-IOS.png);}
-.And2{background: url(../animat/Profile-IOS.png);}
-.And3{background: url(../animat/Lenta-IOS.png);}
-.And4{background: url(../animat/Video-IOS.png);}
-.And5{background: url(../animat/BlackBox-IOS.png);}
-.And6{background: url(../animat/FindFriends-IOS.png);}
-.And7{background: url(../animat/Meet-IOS.png);}
-.And8{background: url(../animat/Job-IOS.png);}
-.And9{background: url(../animat/Choose-IOS.png);}
+.And1{background: url(../animat/Asap-IOS.png) no-repeat;}
+.And2{background: url(../animat/Profile-IOS.png) no-repeat;}
+.And3{background: url(../animat/Lenta-IOS.png)no-repeat;}
+.And4{background: url(../animat/Video-IOS.png) no-repeat;}
+.And5{background: url(../animat/BlackBox-IOS.png)no-repeat;}
+.And6{background: url(../animat/FindFriends-IOS.png)no-repeat;}
+.And7{background: url(../animat/Meet-IOS.png)no-repeat;}
+.And8{background: url(../animat/Job-IOS.png)no-repeat;}
+.And9{background: url(../animat/Choose-IOS.png)no-repeat;}
 @keyframes Android {
 	0% {
 		
@@ -103,7 +100,11 @@
 		opacity: 1;
 	}
 }
-
+@media screen and (max-width:425px){
+	.island_poppup-Android{
+		background-size: 20px 170px;
+	}
+}
 
 
 
