--- a/assets/css/landing-card4.css
+++ b/assets/css/landing-card4.css
@@ -157,12 +157,12 @@
 			right: 0;
 		}
 		50%{
-			right: 0;
+			right: 115px;
 			opacity: 0;
 			
 		}
 		60%{
-			right: 0;
+			right: 115px;
 			opacity: 1;
 			
 		}
@@ -198,12 +198,12 @@
 			right: 0;
 		}
 		50%{
-			right: 0;
+			right: 113px;
 			opacity: 0;
 			
 		}
 		60%{
-			right: 0;
+			right: 113px;
 			opacity: 1;
 			
 		}
