--- a/assets/css/landing-card4.css
+++ b/assets/css/landing-card4.css
@@ -214,7 +214,7 @@
 		}
 	}
 }
-/* @media screen and (max-width:375px){
+@media screen and (max-width:375px){
 	@keyframes Android {
 		0% {
 			left: 110px;
@@ -254,7 +254,7 @@
 			
 		}
 	}
-} */
+}
 @media screen and (max-width:320px){
 	@keyframes Android {
 		0% {
@@ -385,12 +385,12 @@
 	
 	.left-side {
     width: 16px;
-    height: 98%;
+    height: 100%;
     background: #1e1d1d;
     transform: rotateY(90deg);
     margin-top: 309px;
     position: relative;
-    margin-left: -4px;
+    margin-left: -6px;
     bottom: 588px;
 }
 	
@@ -434,7 +434,7 @@
 	}
 	.left-side {
     width: 16px;
-    height: 98%;
+    height: 101%;
     background: #1e1d1d;
     transform: rotateY(90deg);
     margin-top: 309px;
@@ -498,12 +498,12 @@
 	
 	.left-side {
     width: 16px;
-    height: 99%;
+    height: 101%;
     background: #1e1d1d;
     transform: rotateY(90deg);
     margin-top: 309px;
     position: relative;
-    margin-left: 3px;
+    margin-left: -5px;
     bottom: 588px;
 }
 	}
